--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -1,5 +1,5 @@
 @import '../../../scss/fonts.scss';
-@import '../../../scss/colors.scss';
+@import '../../../scss/variables.scss';
 @import '../../../components/logo/logo.scss';
 @import '../../../components/text-fields/text-fields.scss';
 @import '../../../components/abouts-room/abouts-room.scss';
