--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -1,4 +1,4 @@
-@import '../../../node_modules/ion-rangeslider/css/ion.rangeSlider.min.css';
+@import '~ion-rangeslider/css/ion.rangeSlider.css';
 
 .range-slider {
   width: 100%;
