--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -11,17 +11,21 @@
     color: $color-main-50;
     text-align: center;
     cursor: pointer;
+    border-radius: 22px;
+    &:hover {
+      background-image: linear-gradient(180deg, rgba(188, 156, 255, 0.4) 0%, rgba(139, 164, 249, 0.4) 100%);
+    }
     &:first-child {
+      opacity: 1;
       font-weight: bold;
       color: white;
       background: $color-secondary-gradient;
-      border-radius: 22px;
+      cursor: default;
     }
     &:last-child {
       font-family: $material-icons;
       color: white;
       background: $color-tertiary-gradient;
-      border-radius: 22px;
       font-size: 1.5rem;
     }
   }
