--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -15,6 +15,7 @@
   }
   &__bottom-buttons {
     display: flex;
+    padding: 0 20px;
     justify-content: space-between;
     &_hidden {
       display: none;
@@ -22,6 +23,7 @@
   }
   &__bottom-button {
     background: none;
+    color: $color-secondary;
     border: none;
     font-family: inherit;
     text-transform: uppercase;
@@ -32,7 +34,6 @@
     cursor: pointer;
   }
   &__clear {
-    color: $color-main-50;
     &_hidden {
       visibility: hidden;
     }
@@ -41,10 +42,7 @@
     display: none;
   }
   &--content {
-    padding-left: 19px;
-    padding-right: 19px;
-    padding-top: 0px;
-    padding-bottom: 0px;
+    padding: 0px;
     margin-bottom: 19px;
     margin-top: 21px;
   }
@@ -64,25 +62,32 @@
     }
   }
   &--day-name {
+    flex: initial;
     text-transform: none;
     font-weight: bold;
     color: $color-secondary;
     font-size: 12px;
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
   }
   &--days-names {
+    justify-content: center;
+    flex-wrap: nowrap;
     margin-top: 0px;
     margin-bottom: 0px;
+  }
+  &--cells {
+    margin: 0 auto;
+    width: 266px;
   }
 }
 .datepicker--cell-day.-other-month- {
   color: $color-main-25;
 }
 .datepicker--cell-day {
-  width: 40px;
-  height: 40px;
-  border-radius: 22px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
 }
 .datepicker--cell.-current- {
   color: #fff;
@@ -106,8 +111,8 @@
     content: '';
     top: 0;
     right: 0;
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
     position: absolute;
     background: linear-gradient(180deg, rgba(188, 158, 255, 0.25) 0%, rgba(139, 164, 249, 0.25) 100%);
     z-index: -2;
@@ -121,8 +126,8 @@
     content: '';
     top: 0;
     left: 0;
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
     position: absolute;
     background: linear-gradient(180deg, rgba(188, 158, 255, 0.25) 0%, rgba(139, 164, 249, 0.25) 100%);
     border-radius: 0px 22px 22px 0;
@@ -137,8 +142,8 @@
     content: '';
     top: 0;
     right: 0;
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
     position: absolute;
     background: linear-gradient(180deg, rgba(188, 158, 255, 0.25) 0%, rgba(139, 164, 249, 0.25) 100%);
     border-radius: 22px 0 0 22px;
