--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -46,7 +46,7 @@
     color: $color-main-75;
     outline: none;
     cursor: pointer;
-    transition: border-radius 0.2s;
+    transition: border-radius 0.4s;
     &_expanded {
       border-radius: 4px 4px 0px 0px;
       border-color: $color-main-50;
@@ -57,10 +57,10 @@
     }
   }
   &__elements {
-    transform: scaleY(0);
-    border: 1px solid $color-main-50;
+    border-left: 1px solid $color-main-50;
+    border-right: 1px solid $color-main-50;
+    border-bottom: 0px solid $color-main-50;
     border-radius: 0px 0px 4px 4px;
-    border-top-width: 0;
     padding-left: 14px;
     padding-right: 7px;
     position: absolute;
@@ -68,12 +68,15 @@
     background: #fff;
     box-shadow: 0px 10px 20px $color-main-05;
     box-sizing: border-box;
-    transform-origin: 0 0;
-    transition: transform 0.2s;
-    &_expanded {
-      transform: scaleY(1);
-    }
     z-index: 1;
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.4s ease-in-out, border-bottom 0.2s;
+    &_expanded {
+      border-bottom: 1px solid $color-main-50;
+      max-height: 300px;
+      z-index: 10;
+    }
   }
   &__element {
     position: relative;
@@ -89,12 +92,13 @@
     text-transform: uppercase;
   }
   &__button {
-    font-family: Arial, sans-serif;
+    font-family: $font-main;
     font-size: 1.125rem;
     color: $color-main-50;
     border: 1px solid $color-main-25;
     width: 1.875rem;
     height: 1.875rem;
+    text-align: center;
     background: none;
     border-radius: 50%;
     text-transform: uppercase;
