--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -5,4 +5,4 @@ mixin range-slider({ title })
       .range-slider__title= title
       .range-slider__result.js-range-slider__result
     .range-slider__slider
-      input(type="text" class="range-slider-here" name="my_range" value="")
+      input.range-slider__slider-input.js-range-slider__slider-input(type="text")
